# rust_datadog_tracing_demo

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: json_log_layer.rs  main.rs
